--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,6 +18,23 @@
 
 <h1>Codeosseum Login</h1>
 
+<div>
+    <div th:if="${param.error}">
+        Invalid username and password.
+    </div>
+    <form th:action="@{/login}" method="post">
+        <div>
+            <label>Username: <input type="text" name="username"/></label>
+        </div>
+        <div>
+            <label>Password: <input type="password" name="password"/></label>
+        </div>
+        <div>
+            <input type="submit" value="Sign In"/>
+        </div>
+    </form>
+</div>
+
 </body>
 
 </html>
