--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,6 +18,22 @@
 
     <h1>Codeosseum Registration</h1>
 
+    <form class="registration-form">
+        <div>
+            <label>Username: <input type="text" name="username"/></label>
+        </div>
+        <div>
+            <label>Password: <input type="password" name="password"/></label>
+        </div>
+        <div>
+            <label>Email: <input type="email" name="email"/></label>
+        </div>
+        <div>
+            <input class="register-button" type="button" value="Register" />
+        </div>
+    </form>
+
+    <script src="/js/registration.js"></script>
 </body>
 
 </html>
