Lots of smaller changes here and there to make sure, that matchmaking and match flow works

--- a/src/main/resources/templates/game/matchmaking.html
+++ b/src/main/resources/templates/game/matchmaking.html
@@ -18,6 +18,9 @@
 
 <h1>Codeosseum Matchmaking</h1>
 
+<button id="find-match-button">Find Match</button>
+
+<script src="/js/matchmaking.js"></script>
 </body>
 
 </html>
