--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
     <div th:if="${param.error}">
         Invalid username and password.
     </div>
-    <form th:action="@{/login}" method="post">
+    <form th:action="@{/login}" method="post" id="login-form">
         <div>
             <label>Username: <input type="text" name="username"/></label>
         </div>
@@ -35,6 +35,7 @@
     </form>
 </div>
 
+<script src="/js/login.js"></script>
 </body>
 
 </html>
