Finalized the landing page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,11 +12,72 @@
 
     <meta name="description" content="Codeosseum">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="/style/home.css">
 </head>
 
 <body>
 
-    <h1>Codeosseum</h1>
+    <main>
+        <header class="is-fullheight">
+            <nav>
+                <div class="nav-container container">
+                    <a class="branding" href="/">
+                        <img src="/image/logo-text.png">
+                    </a>
+                </div>
+            </nav>
+
+            <div class="content">
+                <div class="content-container">
+                    <div class="slogan-container">
+                        <div class="slogan-wrapper">
+                            <h1 class="slogan">
+                                New era in
+                                <span>competitive programming.</span>
+                            </h1>
+                            <div class="slogan-buttons">
+                                <a href="" class="action-button">
+                                    Enter the Arena
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="features-container">
+                        <div class="feature">
+                            <div class="feature-title">
+                                Code. Fight. Grow.
+                            </div>
+                            <div class="feature-description">
+                                Fight others in coding battles to step up your DEV or QA game.
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature-title">
+                                Real-Time Battles
+                            </div>
+                            <div class="feature-description">
+                                Engage in real-time coding battles against other players.
+                            </div>
+                        </div>
+                        <div class="feature">
+                            <div class="feature-title">
+                                Multiple Game Modes
+                            </div>
+                            <div class="feature-description">
+                                Sharpen your skills in games modes such as Fault Seeding or Team Deathmatch.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </header>
+        
+    </main>
 
 </body>
 
