--- a/src/main/resources/public/style/home.css
+++ b/src/main/resources/public/style/home.css
@@ -34,16 +34,30 @@ header > .content {
 }
 
 .container {
-    width: 1170px;
     height: 100%;
 
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
 }
 
 .nav-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+a.nav-button {
+    text-decoration: none;
+    padding: 0.777em 1.333em;
+    margin-left: 3em;
+    color: #702412;
+    border: 1px solid #cc972d;
+    border-radius: 4px;
+}
+
+a.nav-button.sign-up-button:hover, a.nav-button.sign-in-button:hover {
+    cursor: pointer;
+    border-color: #702412;
 }
 
 .branding {
@@ -62,10 +76,8 @@ header > .content {
     position: relative;
     padding: 3em 0em;
     height: 100%;
-    padding-left: 13%;
-    padding-right: 5%;
-
-    
+    padding-left: 12.5%;
+    padding-right: 2.5%;
 }
 
 .slogan-container {
@@ -97,6 +109,11 @@ a.action-button {
     background-color: #cc972d;
     box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.2);
     color: white;
+}
+
+a.action-button:hover {
+    box-shadow: 0px 7px 7px 2px #cc972daa;
+    cursor: pointer;
 }
 
 .slogan-buttons {
