--- a/src/main/resources/public/style/home.css
+++ b/src/main/resources/public/style/home.css
@@ -36,8 +36,8 @@ header > .content {
 .container {
     height: 100%;
 
-    margin-left: 12.5%;
-    margin-right: 12.5%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .nav-container {
@@ -49,15 +49,19 @@ header > .content {
 a.nav-button {
     text-decoration: none;
     padding: 0.777em 1.333em;
-    margin-left: 3em;
+    margin-left: 2em;
     color: #702412;
+}
+
+a.nav-button.sign-up-button {
     border: 1px solid #cc972d;
     border-radius: 4px;
 }
 
+
 a.nav-button.sign-up-button:hover, a.nav-button.sign-in-button:hover {
     cursor: pointer;
-    border-color: #702412;
+    color: #cc972d;
 }
 
 .branding {
@@ -76,7 +80,7 @@ a.nav-button.sign-up-button:hover, a.nav-button.sign-in-button:hover {
     position: relative;
     padding: 3em 0em;
     height: 100%;
-    padding-left: 12.5%;
+    padding-left: 20%;
     padding-right: 2.5%;
 }
 
@@ -124,7 +128,7 @@ a.action-button:hover {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     float: left;
     width: 40%;
 }
@@ -147,5 +151,5 @@ a.action-button:hover {
 }
 
 .feature-description {
-    font-size: 1.2rem;
+    font-size: 1.333rem;
 }
