Frontend renamings and Sign Up page revamp

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,10 +29,10 @@
                         <img th:src="@{/image/logo-text.png}">
                     </a>
                     <div class="nav-right">
-                        <a th:href="@{/login}" class="nav-button sign-in-button">
+                        <a th:href="@{/signin}" class="nav-button sign-in-button">
                             Sign In
                         </a>
-                        <a th:href="@{/registration}" class="nav-button sign-up-button">
+                        <a th:href="@{/signup}" class="nav-button sign-up-button">
                             Sign Up
                         </a>
                     </div>
@@ -48,7 +48,7 @@
                                 <span>competitive programming.</span>
                             </h1>
                             <div class="slogan-buttons">
-                                <a th:href="@{/login}" class="action-button">
+                                <a th:href="@{/signin}" class="action-button">
                                     Enter the Arena
                                 </a>
                             </div>
