--- a/src/main/resources/public/style/signup.css
+++ b/src/main/resources/public/style/signup.css
@@ -15,6 +15,7 @@ main {
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: auto;
 }
 
 .branding {
@@ -30,7 +31,7 @@ main {
 }
 
 .content-container {
-    width: 350px;
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
     padding: 6em 0em;
@@ -41,13 +42,13 @@ main {
     align-items: center;
 }
 
-.sign-in-heading {
+.sign-up-heading {
     margin: 1rem 0em;
     font-weight: 300;
     font-size: 1.777rem;
 }
 
-.sign-in-form-container {
+.sign-up-form-container {
     width: 100%;
     padding: 1.5em;
     background: #ffffff;
@@ -63,36 +64,43 @@ label {
     padding-bottom: 5px;
 }
 
-input[type="text"], input[type="password"] {
+.input-information {
+    margin-top: 10px;
+    font-size: 12.777px;
+    color: #707070;
+}
+
+input[type="text"], input[type="password"], input[type="email"] {
     border: 1px solid #B1B1B1;
     border-radius: 4px;
     padding: 9px;
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
     border-color: #cc972d;
 }
 
-input[type="submit"] {
+button.sign-up-button {
     border: none;
     padding: 0.555em 0.555em;
     font-size: 1rem;
     background-color: #cc972d;
     box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.2);
     color: white;
+    width: 100%;
 }
 
-input[type="submit"]:hover {
+button.sign-up-button:hover {
     box-shadow: 0px 7px 7px 2px #cc972daa;
     cursor: pointer;
 }
 
-.sign-in-form > div {
+.sign-up-form > div {
     padding-top: 10px;
     padding-bottom: 5px;
 }
 
-.sign-up-container {
+.bottom-container {
     width: 100%;
     margin: 1rem 0em;
     padding: 1rem;
@@ -101,12 +109,12 @@ input[type="submit"]:hover {
     text-align: center;
 }
 
-.sign-up-link {
+.bottom-link {
     text-decoration: none;
     color: #702412;
 }
 
-.sign-up-link:hover {
+.bottom-link:hover {
     text-decoration: underline;
     color: #702412;
 }
