--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -8,14 +8,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Codeosseum Login</title>
+    <title>Codeosseum Sign In</title>
 
-    <meta name="description" content="Codeosseum Login">
+    <meta name="description" content="Codeosseum Sign In">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet"> 
 
-    <link rel="stylesheet" th:href="@{/style/login.css}">
+    <link rel="stylesheet" th:href="@{/style/signin.css}">
 </head>
 
 <body>
@@ -28,8 +28,11 @@
         <h1 class="sign-in-heading">
             Sign in to Codeosseum
         </h1>
+        <div th:if="${param.error}" class="credential-error">
+            Incorrect username or password.
+        </div>
         <div class="sign-in-form-container">
-            <form th:action="@{/login}" method="post" class="sign-in-form">
+            <form th:action="@{/signin}" method="post" class="sign-in-form">
                 <div>
                     <label>Username</label>
                     <input type="text" name="username"/>
@@ -45,23 +48,12 @@
         </div>
         <div class="sign-up-container">
             <span>First time?</span>
-            <a class="sign-up-link" th:href="@{/registration}">Create an account.</a>
+            <a class="sign-up-link" th:href="@{/signup}">Create an account.</a>
         </div>
     </div>
 </main>
 
-<!--
-<h1>Codeosseum Login</h1>
-
-<div>
-    <div th:if="${param.error}">
-        Invalid username and password.
-    </div>
-    
-</div>
--->
-
-<script src="/js/login.js"></script>
+<script src="/js/signin.js"></script>
 </body>
 
 </html>
