--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -33,6 +33,8 @@
                 <div>
                     <label>Username</label>
                     <input type="text" name="username"/>
+                    <div class="field-error username">
+                    </div>
                     <div class="input-information">
                         A unique username that will identify your account in Codeosseum.
                     </div>
@@ -40,6 +42,8 @@
                 <div>
                     <label>Email address</label>
                     <input type="email" name="email"/>
+                    <div class="field-error email">
+                    </div>
                     <div class="input-information">
                         From time to time we will send configurable notifications to this address. Doubles as password recovery address. 
                     </div>
@@ -47,6 +51,8 @@
                 <div>
                     <label>Password</label>
                     <input type="password" name="password"/>
+                    <div class="field-error password">
+                    </div>
                     <div class="input-information">
                         Just make sure, it's at least 10 characters.
                     </div>
