--- a/src/main/resources/templates/game/matchmaking.html
+++ b/src/main/resources/templates/game/matchmaking.html
@@ -120,7 +120,7 @@
         </header>
         
     </main>
-    <script src="/js/matchmaking.js"></script>
+    <script th:src="@{/js/matchmaking.js}"></script>
 </body>
 
 </html>
