--- a/src/main/resources/public/style/game/matchmaking.css
+++ b/src/main/resources/public/style/game/matchmaking.css
@@ -204,6 +204,11 @@ div.action-button:hover {
     font-size: 1.567em;
 }
 
+.match-action-button:hover {
+    cursor: pointer;
+    box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.7);
+}
+
 .cancel-match-button {
     background: #ff000077;
 }
