--- a/src/main/resources/public/style/fault-seeding.css
+++ b/src/main/resources/public/style/fault-seeding.css
@@ -166,7 +166,7 @@ main {
     overflow-y: auto;
 }
 
-.specification > .specification-content > div > h2:first-child {
+.specification > .specification-content > div > h1:first-child {
     margin-top:0;
 }
 
@@ -213,6 +213,11 @@ footer {
     padding-left: 15px;
 }
 
+.submit-button:hover {
+	cursor: pointer;
+	background: #dae9d9;
+}
+
 .leaderboard {
     display: flex;
 }
@@ -226,159 +231,3 @@ footer {
     font-weight: lighter;
     border-right: 2.5px solid #ddd;
 }
-
-
-
-
-/*
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    font-family: "Open Sans", sans-serif;
-}
-
-header {
-    height: 100vh;
-    background: url("/public/image/helmet-background.jpg");
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-header > * {
-    width: 100%;
-}
-
-header > nav {
-    height: 100px;
-    background: white;
-    position: relative;
-    
-    box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.2);
-}
-
-header > .content {
-    height: calc(100% - 100px);
-}
-
-.container {
-    height: 100%;
-
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-.nav-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-a.nav-button {
-    text-decoration: none;
-    padding: 0.777em 1.333em;
-    margin-left: 2em;
-    color: #702412;
-}
-
-a.nav-button.sign-up-button {
-    border: 1px solid #cc972d;
-    border-radius: 4px;
-}
-
-
-a.nav-button.sign-up-button:hover, a.nav-button.sign-in-button:hover {
-    cursor: pointer;
-    color: #cc972d;
-}
-
-.branding {
-    display: block;
-    width: 17.5em;
-}
-
-.branding > img {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.content-container {
-    position: relative;
-    padding: 3em 0em;
-    height: 100%;
-    padding-left: 20%;
-    padding-right: 2.5%;
-}
-
-.slogan-container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    float: left;
-    width: 60%;
-}
-
-.slogan {
-    margin: 0;
-    padding: 0;
-    font-size: 3rem;
-    
-    font-weight: 300;
-    color: #702412;
-}
-
-.slogan > span {
-    display: block;
-    font-weight: 400;
-}
-
-a.action-button {
-    text-decoration: none;
-    padding: 0.7em 0.7em;
-    font-size: 1.5rem;
-    background-color: #cc972d;
-    box-shadow: 0px 7px 7px 2px rgba(0, 0, 0, 0.2);
-    color: white;
-}
-
-a.action-button:hover {
-    box-shadow: 0px 7px 7px 2px #cc972daa;
-    cursor: pointer;
-}
-
-.slogan-buttons {
-    padding: 3em 0em;
-}
-
-.features-container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    float: left;
-    width: 40%;
-}
-
-.clear {
-    clear: both;
-}
-
-.feature {
-    color: #ffffff;
-    background: #702412;
-    box-shadow: 5px 20px 20px 10px rgba(0, 0, 0, 0.4);
-    padding: 2em 2em;
-}
-
-.feature-title {
-    font-weight: 300;
-    font-size: 1.777rem;
-    padding-bottom: 0.333em;
-}
-
-.feature-description {
-    font-size: 1.333rem;
-}*/
