--- a/src/main/resources/templates/game/fault-seeding.html
+++ b/src/main/resources/templates/game/fault-seeding.html
@@ -40,6 +40,27 @@
         </div>
     </div>
 
+    <div class="overlay over-overlay hidden">
+        <div class="wrap">
+            <div class="final-score-box">
+                <div class="final-score-heading">
+                    <h1>Result</h1>
+                </div>
+                <div class="final-score-content">
+                    <table class="final-score-table">
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="final-score-footer">
+                    <div class="quit-button">
+                        Quit
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header>
         <div class="branding">
             <div class="logo">
